--- a/options.html
+++ b/options.html
@@ -18,8 +18,8 @@
 		
 		<div class="jumbotron">
 		  <div class="container">
-			<h1>Coupon Recorder</h1>
-			<p>Record user view log for Coupon.</p>
+			<h1>Github Remark</h1>
+			<p>给你的github好友添加备注吧～</p>
 		  </div>
 		</div>
 
