--- a/popup.html
+++ b/popup.html
@@ -1,34 +1,32 @@
 <!DOCTYPE html>
 <html lang="en">
-	<head>
-		<meta charset="utf-8">
-		<title>coupon</title>
-		<link href="bower_components/bootstrap/dist/css/bootstrap.css" rel="stylesheet">
-		<style>
+
+<head>
+	<meta charset="utf-8">
+	<title>coupon</title>
+	<!-- CSS only -->
+	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css"
+		integrity="sha384-HSMxcRTRxnN+Bdg0JdbxYKrThecOKuH5zCYotlSAcp1+c8xmyTe9GYg1l9a69psu" crossorigin="anonymous">
+	<style>
 		* {
 			margin: 0;
 			padding: 0;
-		} 
+		}
+
 		body {
 			width: 70px;
 			height: 80px;
 		}
-		 
-		</style>
-	</head>
+	</style>
+</head>
 
-	<body>
-		<ul class="nav nav-pills nav-stacked">
-			<li role="presentation"><a href="#" id="startRecord"><span class="glyphicon glyphicon-record" aria-hidden="true"></span> On</a></li>
-			<li role="presentation"><a href="#" id="stopRecord"><span class="glyphicon glyphicon-pause" aria-hidden="true"></span> Off</a></li>
-			
-		</ul>
+<body>
+	<ul class="nav nav-pills nav-stacked">
+		<li role="presentation"><a href="#" id="startRecord"><span class="glyphicon glyphicon-record" aria-hidden="true"></span> On</a></li>
+		<li role="presentation"><a href="#" id="stopRecord"><span class="glyphicon glyphicon-pause" aria-hidden="true"></span> Off</a></li>	
+	</ul>
 
-
-		<script src="bower_components/jquery/dist/jquery.js"></script>
-		<script src="bower_components/bootstrap/dist/js/bootstrap.js"></script>
-
-		<script src="popup.js"></script>
-	</body>
+	<script src="popup.js"></script>
+</body>
 
 </html>
